basic layout (base.html.twig)

--- a/Symfony/src/Gredin/CantataBundle/Resources/views/Home/welcome.html.twig
+++ b/Symfony/src/Gredin/CantataBundle/Resources/views/Home/welcome.html.twig
@@ -1,3 +1,9 @@
+{% extends '::base.html.twig' %}
+
+{% block title %}Welcome!{% endblock %}
+
+{% block body %}
 <p>Welcome!</p>
 
 <a href="{{ path('gredin_cantata_signup') }}">Sign up</a>
+{% endblock %}
