--- a/Symfony/src/Gredin/CantataBundle/Resources/views/Registration/signup.html.twig
+++ b/Symfony/src/Gredin/CantataBundle/Resources/views/Registration/signup.html.twig
@@ -1,5 +1,11 @@
+{% extends '::base.html.twig' %}
+
+{% block title %}Sign up{% endblock %}
+
+{% block body %}
 <h1>Sign up form</h1>
 
 <p>Please fill in this form:</p>
 
 {{ form(form) }}
+{% endblock %}
