--- a/Symfony/src/Gredin/CantataBundle/Resources/views/Registration/success.html.twig
+++ b/Symfony/src/Gredin/CantataBundle/Resources/views/Registration/success.html.twig
@@ -1,1 +1,7 @@
-BRAVO !
+{% extends '::base.html.twig' %}
+
+{% block title %}Sign up: success{% endblock %}
+
+{% block body %}
+<h1>Bravo !</h1>
+{% endblock %}
