--- a/Symfony/src/Gredin/CantataBundle/Resources/views/base.html.twig
+++ b/Symfony/src/Gredin/CantataBundle/Resources/views/base.html.twig
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="fr">
+<html lang="{% block lang %}fr{% endblock %}">
     <head>
         <meta charset="utf-8">
-        <title>Titre</title>
+        <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
-
+        {% block body %}{% endblock %}
     </body>
 </html>
